--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <!--(2)、Import the Ad Placement API---END-->
 
   <script type="text/javascript" src="src/assets/scripts/server/gta-amplitude.js"></script>
-  <script src="src/settings.09886.js" charset="utf-8"></script>
-  <script src="main.1f820.js" charset="utf-8"></script>
+  <script src="src/settings.5179c.js" charset="utf-8"></script>
+  <script src="main.07133.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
@@ -81,7 +81,7 @@
 
       var cocos2d = document.createElement('script');
       cocos2d.async = true;
-      cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.8a04a.js';
+      cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.4226d.js';
 
       var engineLoaded = function () {
         document.body.removeChild(cocos2d);
